--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,8 @@
 <html>
 <head></head>
 <body>
-Hello!
+<b>::Multiple Ajax Call:: Servlet Application::</b>
+
 
 <form  name = "form" method="get" action="helloServ" onclick="loadXMLDoc()" >
 
